fix: align dropdown menu to right on mobile view

--- a/src/heads.css
+++ b/src/heads.css
@@ -50,7 +50,7 @@
 
     position: absolute;
     top: -500px; 
-    right: 10px;
+    right: 30px;
     left: auto;
     height: 45vh;
     text-align: center;
